# OneScience

./: .gitignore  MLP.py  README.md  constraints.txt  env.sh  install.sh  install_DAS.sh  manifest.py  modules_list.md  pyproject.toml  requirements.txt  setup.py
benchmark/: README.md
doc/: af3_auto_build_changes.md  (+1 more)
src/onescience/flax_models/alphafold3/: CMakeLists.txt  README.md  __init__.py  build_data.py  build_extension.py  package_config.py
src/onescience/flax_models/alphafold3/common/: base_config.py  folding_input.py  resources.py
src/onescience/flax_models/alphafold3/common/testing/: data.py
src/onescience/flax_models/alphafold3/constants/: atom_types.py  chemical_component_sets.py  chemical_components.py  mmcif_names.py  periodic_table.py  residue_names.py  side_chains.py
src/onescience/flax_models/alphafold3/constants/converters/: ccd_pickle_gen.py  chemical_component_sets_gen.py
src/onescience/flax_models/alphafold3/data/: featurisation.py  msa.py  msa_config.py  msa_features.py  msa_identifiers.py  msa_store.py  parsers.py  pipeline.py  structure_stores.py  template_realign.py  template_store.py  templates.py
src/onescience/flax_models/alphafold3/data/tools/: hmmalign.py  hmmbuild.py  hmmsearch.py  jackhmmer.py  mmseqs.py  msa_tool.py  nhmmer.py  rdkit_utils.py  subprocess_utils.py
src/onescience/flax_models/alphafold3/jax/attention/: attention.py  attention_base.py  attention_call_arg_specs.py  flash_attention.py  xla_attention.py
src/onescience/flax_models/alphafold3/jax/common/: array_view.py  precision.py  triton_utils.py
src/onescience/flax_models/alphafold3/jax/gated_linear_unit/: block.py  gated_linear_unit.py  gated_linear_unit_base.py  matmul_config.py  matmul_ext.py
src/onescience/flax_models/alphafold3/jax/geometry/: __init__.py  rigid_matrix_vector.py  rotation_matrix.py  struct_of_array.py  utils.py  vector.py
src/onescience/flax_models/alphafold3/model/: confidence_types.py  confidences.py  data3.py  data_constants.py  feat_batch.py  features.py  merging_features.py  mmcif_metadata.py  model.py  model_config.py  msa_pairing.py  params.py  post_processing.py  protein_data_processing.py
src/onescience/flax_models/alphafold3/model/atom_layout/: atom_layout.py
src/onescience/flax_models/alphafold3/model/components/: haiku_modules.py  mapping.py  utils.py
src/onescience/flax_models/alphafold3/model/network/: atom_cross_attention.py  confidence_head.py  diffusion_head.py  diffusion_transformer.py  distogram_head.py  evoformer.py  featurization.py  modules.py  noise_level_embeddings.py  template_modules.py
src/onescience/flax_models/alphafold3/model/pipeline/: inter_chain_bonds.py  pipeline.py  structure_cleaning.py
src/onescience/flax_models/alphafold3/model/scoring/: alignment.py  chirality.py  covalent_bond_cleaning.py  scoring.py
src/onescience/flax_models/alphafold3/parsers/cpp/: cif_dict.pyi  fasta_iterator.pyi  msa_conversion.pyi
src/onescience/flax_models/alphafold3/structure/: __init__.py  bioassemblies.py  bonds.py  chemical_components.py  mmcif.py  parsing.py  sterics.py  structure.py  structure_tables.py  table.py  test_utils.py
src/onescience/flax_models/alphafold3/structure/cpp/: aggregation.pyi  membership.pyi  mmcif_atom_site.pyi  mmcif_layout.pyi  mmcif_struct_conn.pyi  mmcif_utils.pyi  string_array.pyi
(+3247 files in other folders)
